--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 <!-- Add more list items as needed -->
 			</ul>
         </section>
+        <section></section>
+        <section></section>
+        <section></section>
     </div>
     <script src="script.js"></script>
 </body>
