--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <header>
-            <img src="headshot.jpg" alt="Headshot" class="headshot">
-            <h1 id="name">Name</h1>
-            <p id="contactInfo">Location | Email</p>
+            <img src="img/330454310_6007220916062518_6387672739063392730_n.jpg" alt="Headshot" class="headshot">
+            <h1 id="name">Boubacar Kina</h1>
+            <p id="contactInfo">Niamey-Niger | Email: boubacarkina1@gmail.com</p>
         </header>
         <section id="employmentHistory">
             <h2>Employment History</h2>
@@ -35,9 +35,6 @@
                 <!-- Add more list items as needed -->
 			</ul>
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
     </div>
     <script src="script.js"></script>
 </body>
