--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 				<li>Skill 2</li>
 				<li>Skill 3</li>
 				<li>Skill 4</li>
+				<li>Skill 5</li>
+				<li>Skill 6</li>
                 <!-- Add more list items as needed -->
 			</ul>
         </section>
