--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <ul>
                 <li>Degree | University (Year)</li>
                 <li>Degree | University (Year)</li>
+                <li>Degree | University (Year)</li>
                 <!-- Add more list items as needed -->
             </ul>
         </section>
