--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 				<li>Skill 2</li>
 				<li>Skill 3</li>
 				<li>Skill 4</li>
+				<li>Skill 4</li>
                 <!-- Add more list items as needed -->
 			</ul>
         </section>
